--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-db.url = jdbc:postgresql://localhost:5432/postgres
-db.username = postgres
-db.password = sqrt
-html.directory = src/main/resources/templates
+db.url =jdbc:postgresql://localhost:5432/postgres
+db.username =postgres
+db.password =sqrt
+html.directory =src/main/resources/templates
+
